# lib/routes/Products.js
@@ -3,7 +3,6 @@
 const productManager = require('./../managers/Product');
 const config = require('config');
 
-// GET
 function getProductInfo(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -16,7 +15,6 @@ function getProductInfo(req, res, next) {
   });
 }
 
-// PUT
 function updateProductInfo(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -29,7 +27,6 @@ function updateProductInfo(req, res, next) {
   });
 }
 
-// DEL
 function deleteProduct(req, res, next) {
 
   let id = req.swagger.params.id.value;
@@ -53,7 +50,7 @@ function createProduct(req, res, next) {
   });
 }
 
-// GET
+
 function listAllProducts(req, res, next) {
 
   let offset = req.swagger.params.offset.value || 0;
@@ -76,10 +73,21 @@ function listAllProducts(req, res, next) {
   });
 }
 
-// GET
 function shareProduct(req, res, next) {
   // TODO: Implement share
   return next();
 }
 
-module.exports = {getProductInfo, updateProductInfo, deleteProduct, createProduct, listAllProducts, shareProduct};
+function deleteAllCompilations(req, res, next) {
+
+  let productId = req.swagger.params.id.value;
+
+  productManager.removeAllCompilations(productId, function(error) {
+
+    if (error) return next(error);
+
+    res.status(204).send();
+  });
+}
+
+module.exports = {getProductInfo, updateProductInfo, deleteProduct, createProduct, listAllProducts, shareProduct, deleteAllCompilations};
